--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>스크롤 소개 페이지</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/character.css" />
-    <link rel="stylesheet" href="style/modal.css" />
+    <link rel="stylesheet" href="style/talk.css" />
   </head>
   <body>
     <img src="img/bg_2.jpg" alt="" id="bg" />
@@ -15,15 +15,14 @@
     <img src="img/npc.png" alt="" class="npc" id="npc1" />
     <img src="img/npc.png" alt="" class="npc" id="npc2" />
     <img src="img/npc.png" alt="" class="npc" id="npc3" />
-    <div class="modal hidden">
-      <div class="modal__overlay"></div>
-      <div class="modal__content">
+    <div class="talk hidden">
+      <div class="talk__overlay"></div>
+      <div class="talk__content">
         <h1>Hello</h1>
-        <button id="close">close</button>
+        <button class="close">close</button>
       </div>
     </div>
 
     <script src="js/player.js"></script>
-    <script src="js/modal.js"></script>
   </body>
 </html>
