--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
     <div class="talk hidden">
       <div class="talk__overlay"></div>
       <div class="talk__content">
-        <h1>Hello</h1>
-        <button class="close">close</button>
+        <h3 class="talk__char">냥도리</h3>
+        <p class="talk__script">우오아아 아아앙</p>
+        <button class="nextBtn">다음</button>
       </div>
     </div>
 
