--- a/index.html
+++ b/index.html
@@ -4,26 +4,43 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>스크롤 소개 페이지</title>
+    <title>원광대학교</title>
     <link rel="stylesheet" href="style/style.css" />
     <link rel="stylesheet" href="style/character.css" />
     <link rel="stylesheet" href="style/talk.css" />
   </head>
   <body>
-    <img src="img/bg_2.jpg" alt="" id="bg" />
-    <img src="img/cat-front.gif" alt="" id="player" />
-    <img src="img/npc.png" alt="" class="npc" id="npc1" />
-    <img src="img/npc.png" alt="" class="npc" id="npc2" />
-    <img src="img/npc.png" alt="" class="npc" id="npc3" />
-    <div class="talk hidden">
-      <div class="talk__overlay"></div>
-      <div class="talk__content">
-        <h3 class="talk__char">냥도리</h3>
-        <p class="talk__script">우오아아 아아앙</p>
-        <button class="nextBtn">다음</button>
+    <img src="img/bg-campus.png" alt="" id="bg" />
+    <img src="img/player.gif" alt="" id="player" />
+    <img src="img/npc1.png" alt="" class="npc" id="npc1" />
+    <img src="img/npc2.png" alt="" class="npc" id="npc2" />
+    <img src="img/npc3.png" alt="" class="npc" id="npc3" />
+    <section class="talk-list">
+      <div class="talk hidden" id="talk1">
+        <div class="talk__overlay"></div>
+        <div class="talk__content">
+          <h3 class="talk__char">냥도리</h3>
+          <p class="talk__script">안녕!1</p>
+          <button class="nextBtn">다음</button>
+        </div>
       </div>
-    </div>
-
+      <div class="talk hidden" id="talk2">
+        <div class="talk__overlay"></div>
+        <div class="talk__content">
+          <h3 class="talk__char">냥도리</h3>
+          <p class="talk__script">안녕!2</p>
+          <button class="nextBtn">다음</button>
+        </div>
+      </div>
+      <div class="talk hidden" id="talk3">
+        <div class="talk__overlay"></div>
+        <div class="talk__content">
+          <h3 class="talk__char">냥도리</h3>
+          <p class="talk__script">안녕!3</p>
+          <button class="nextBtn">다음</button>
+        </div>
+      </div>
+    </section>
     <script src="js/player.js"></script>
   </body>
 </html>
